[package]
name = "crab-gnupg"
version = "0.1.3"
edition = "2021"
authors = ["Goh Yu Han <gohyuhan123456@gmail.com>"]

description = "API for GNU Privacy Guard (GnuPG) written in rust. Manage gpg keys and secure files using rust."
license = "MIT"
repository = "https://github.com/hangoh/crab-gnupg"

[dependencies]
chrono = "0.4.38"
hostname = "0.4.0"
regex = "1.11.1"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.14.0"

[features]
test_legacy = []